# rust-benchmark-simple

./: Cargo.toml  README.md
src/: lib.rs
